cmake_minimum_required (VERSION 3.8)
project ("QoSRTP")
option(BUILD_TEST "If set to ON, compile related test projects." ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
add_definitions(-D_CRT_SECURE_NO_WarningS)
add_subdirectory(src)
if (BUILD_TEST)
        add_subdirectory(test)
endif()